# OS_project

./: CMakeLists.txt  README.md
policy/: auth_manager.py  config.py  events.py  logger.py  policy_manager.py  states.py  timer_manager.py  view_manager.py
src/backend/: loader.cpp
tests/: integration_test.py
